--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "dotenv-expand": "4.2.0",
     "draftjs-to-html": "^0.8.4",
     "draftjs-to-markdown": "^0.5.1",
-    "echarts": "^4.2.1",
+    "echarts": "^4.7.0",
+    "echarts-for-react": "^2.0.15-beta.1",
     "eslint": "^5.16.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-loader": "2.1.2",
